--- a/src/main/resources/views/convertidorMedidas.fxml
+++ b/src/main/resources/views/convertidorMedidas.fxml
@@ -10,24 +10,24 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="570.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mx.com.alura.conversoralura.ConvMedidasController">
+<VBox alignment="TOP_CENTER" prefHeight="560.0" prefWidth="400.0" styleClass="background" stylesheets="@../assets/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mx.com.alura.conversoralura.ConvMedidasController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
    <children>
-      <Label text="Convertidor de Longitudes">
+      <Label prefHeight="116.0" prefWidth="310.0" text="Convertidor de Medidas" textAlignment="CENTER" textFill="#052051" wrapText="true">
          <font>
-            <Font name="Agency FB" size="30.0" />
+            <Font name="Agency FB Bold" size="40.0" />
          </font>
          <VBox.margin>
-            <Insets bottom="70.0" top="100.0" />
+            <Insets bottom="70.0" top="50.0" />
          </VBox.margin>
       </Label>
       <HBox alignment="CENTER" prefHeight="41.0" prefWidth="360.0" spacing="10.0" style="-fx-border-color: #b5b5b5; -fx-border-radius: 5px;">
          <children>
-            <TextField fx:id="entrada" onKeyTyped="#convertir" prefHeight="26.0" prefWidth="150.0" promptText="500" />
+            <TextField fx:id="entrada" onKeyTyped="#convertir" onMouseClicked="#reset" prefHeight="34.0" prefWidth="150.0" promptText="500" styleClass="inputText" stylesheets="@../assets/style.css" />
             <Separator orientation="VERTICAL" prefHeight="30.0" />
-            <ComboBox fx:id="fromCurrency" onAction="#convertir" prefWidth="150.0" />
+            <ComboBox fx:id="fromCurrency" onAction="#convertir" prefHeight="26.0" prefWidth="150.0" stylesheets="@../assets/style.css" />
          </children>
          <VBox.margin>
             <Insets bottom="20.0" />
@@ -35,9 +35,9 @@
       </HBox>
       <HBox alignment="CENTER" layoutX="30.0" layoutY="238.0" prefHeight="42.0" prefWidth="325.0" spacing="10.0" style="-fx-border-color: #b5b5b5; -fx-border-radius: 5px;">
          <children>
-            <TextField fx:id="salida" editable="false" prefHeight="26.0" prefWidth="150.0" text="0.00" />
+            <TextField fx:id="salida" editable="false" prefHeight="34.0" prefWidth="150.0" styleClass="inputText" stylesheets="@../assets/style.css" text="0.00" />
             <Separator orientation="VERTICAL" prefHeight="30.0" />
-            <ComboBox fx:id="toCurrency" onAction="#convertir" prefWidth="150.0" />
+            <ComboBox fx:id="toCurrency" onAction="#convertir" prefWidth="150.0" stylesheets="@../assets/style.css" />
          </children>
       </HBox>
       <Button mnemonicParsing="false" onAction="#regresar" text="Volver al Menu">
