--- a/src/main/resources/views/menu.fxml
+++ b/src/main/resources/views/menu.fxml
@@ -5,29 +5,18 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="570.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mx.com.alura.conversoralura.MenuController">
+<VBox fx:id="container" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="400.0" spacing="30.0" styleClass="background" stylesheets="@../assets/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mx.com.alura.conversoralura.MenuController">
    <children>
-      <GridPane alignment="CENTER" prefHeight="591.0" prefWidth="360.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <HBox alignment="CENTER" spacing="20.0">
          <children>
-            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" layoutX="190.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Conversion de Monedas" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button alignment="CENTER" contentDisplay="BOTTOM" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Conversion de Monedas" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true">
                <graphic>
-                  <ImageView fitHeight="83.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="70.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../assets/exchange.png" />
                      </image>
@@ -44,9 +33,9 @@
                   </DropShadow>
                </effect>
             </Button>
-            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" layoutX="32.0" layoutY="28.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initMedidas" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Conversion de Medidas" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <Button alignment="CENTER" contentDisplay="BOTTOM" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initMedidas" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Conversion de Medidas" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <graphic>
-                  <ImageView fitHeight="98.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true" rotate="-15.0" scaleX="1.5" scaleY="1.5">
+                  <ImageView fitHeight="65.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
                      <image>
                         <Image url="@../assets/length_icon.png" />
                      </image>
@@ -63,7 +52,11 @@
                   </DropShadow>
                </effect>
             </Button>
-            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" layoutX="205.0" layoutY="28.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Cambio de Moneda" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" spacing="20.0">
+         <children>
+            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Cambio de Moneda" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="98.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -82,45 +75,7 @@
                   </DropShadow>
                </effect>
             </Button>
-            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" layoutX="10.0" layoutY="216.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Cambio de Moneda" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-               <graphic>
-                  <ImageView fitHeight="98.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assets/exchange.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-               <effect>
-                  <DropShadow height="16.38" offsetX="5.0" offsetY="5.0" radius="10.0275" width="25.73">
-                     <color>
-                        <Color red="0.6631578803062439" green="0.6631578803062439" blue="0.6631578803062439" />
-                     </color>
-                  </DropShadow>
-               </effect>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" layoutX="205.0" layoutY="216.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Cambio de Moneda" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2">
-               <graphic>
-                  <ImageView fitHeight="98.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assets/exchange.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-               <effect>
-                  <DropShadow height="16.38" offsetX="5.0" offsetY="5.0" radius="10.0275" width="25.73">
-                     <color>
-                        <Color red="0.6631578803062439" green="0.6631578803062439" blue="0.6631578803062439" />
-                     </color>
-                  </DropShadow>
-               </effect>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" layoutX="10.0" layoutY="403.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Cambio de Moneda" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Cambio de Moneda" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="98.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -140,7 +95,49 @@
                </effect>
             </Button>
          </children>
-      </GridPane>
+      </HBox>
+      <HBox alignment="CENTER" spacing="20.0">
+         <children>
+            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Cambio de Moneda" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="98.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/exchange.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <effect>
+                  <DropShadow height="16.38" offsetX="5.0" offsetY="5.0" radius="10.0275" width="25.73">
+                     <color>
+                        <Color red="0.6631578803062439" green="0.6631578803062439" blue="0.6631578803062439" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </Button>
+            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#initConvertidor" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #04243c; -fx-background-radius: 20;" text="Cambio de Moneda" textFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="98.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/exchange.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <effect>
+                  <DropShadow height="16.38" offsetX="5.0" offsetY="5.0" radius="10.0275" width="25.73">
+                     <color>
+                        <Color red="0.6631578803062439" green="0.6631578803062439" blue="0.6631578803062439" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </Button>
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
